<resources>
    <string name="app_name">QuizWiz</string>
    <string name="textview">High Score: 50</string>
    <string name="button">Dragon Ball Z</string>
    <string name="science">Science</string>
    <string name="tv_flim">TV/Flim</string>
    <string name="history">History</string>
    <string name="sports">Sports</string>
    <string name="quizwiz">QuizWiz!</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="question">star Joe Dimaggio married which actress</string>
    <string name="answer_1">OJ Simpson</string>
    <string name="mohammed_ali">Mohammed Ali</string>
    <string name="answer_3">marilyn monroe</string>
    <string name="answer_4">mickey mantle</string>
    <string name="score">Score: 10</string>
    <string name="timer">Time: 25</string>
    <string name="passes">Passes: 3</string>
    <string name="lives">Lives: 2</string>
    <string name="select_a_catagory">Select a Catagory:</string>
    <string name="stats">Stats</string>
    <string name="todo">TODO</string>

</resources>
